test/functions/vass/proc-iter/error-return-expr-in-iter-1.good
error-return-expr-in-iter-1.chpl:1: In iterator 'i11f':
error-return-expr-in-iter-1.chpl:3: error: 'return' statements with values are not allowed in iterators
error-return-expr-in-iter-1.chpl:1: note: 'i11f' is declared as an iterator here
